samples/_failures_safe/1761259554_00702c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bff2fe39.c: In function ‘main’:
./samples/SAFE/__tmp_bff2fe39.c:148:5: error: expected declaration or statement at end of input
  148 |     if (!read_matrix_from_input(&mat1)) {
      |     ^~
./samples/SAFE/__tmp_bff2fe39.c:148:5: error: expected declaration or statement at end of input
